CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(navirice)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(rendering)
ADD_SUBDIRECTORY(renderer_bridge)